fix: the dark mode in par default ( forcing the light mode)

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  color-scheme: light;
+}
 body {
   font-family: "Dm sans", sans-serif;
+  background-color: white;
+  color:black
 }
